--- a/products.html
+++ b/products.html
@@ -49,7 +49,7 @@
 
     <!-- banner sectin start -->
     <main>
-    <section class="product-area">   
+    <section class="product-area section-padding">   
         <div class="container">
             <div class="section-title-wrapper">
                 <h2 class="text-center fw-bold mb-4">Our Products</h2>
