active button showing

--- a/products.html
+++ b/products.html
@@ -55,7 +55,7 @@
                 <h2 class="text-center fw-bold mb-4">Our Products</h2>
             </div>
 
-            <div class="product-cat-wrapper text-center" id="product-cat-wrapper">
+            <div class="product-cat-wrapper d-flex justify-content-center gap-2" id="product-cat-wrapper">
                 <button class="cat-btn">All</button>
                 <button class="cat-btn">Electronics</button>
                 <button class="cat-btn">Jewelery</button>
