product details is ok

--- a/products.html
+++ b/products.html
@@ -12,6 +12,20 @@
 </head>
 <body>
 
+
+    <!-- modal section start -->
+    <div class="modal fade" id="productDetails" tabindex="-1" aria-labelledby="productDetailsLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <div class="modal-body" id="product-details-wrapper">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- modal section end -->
+
+
     <!-- header section start -->
      <header class="header-area">
         <nav>
